--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.1.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "defu": "^6.1.2"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
