--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-chatgpt",
-  "version": "0.1.10",
+  "version": "0.2.0",
   "description": "ChatGPT integration for Nuxt 3",
   "license": "MIT",
   "type": "module",
@@ -54,8 +54,8 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.1.1",
-    "openai": "^3.2.1",
-    "defu": "^6.1.2"
+    "defu": "^6.1.2",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
