--- a/package.json
+++ b/package.json
@@ -53,18 +53,18 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.1.1",
-    "defu": "^6.1.2",
-    "openai": "^4.0.0"
+    "@nuxt/kit": "latest",
+    "defu": "latest",
+    "openai": "4.0.0"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxt/eslint-config": "latest",
     "@nuxt/module-builder": "^0.2.1",
-    "@nuxt/schema": "^3.1.1",
-    "@nuxt/test-utils": "^3.1.1",
-    "changelogen": "^0.4.1",
-    "eslint": "^8.32.0",
-    "nuxt": "^3.1.1",
-    "vitest": "^0.28.2"
+    "@nuxt/schema": "latest",
+    "@nuxt/test-utils": "latest",
+    "changelogen": "latest",
+    "eslint": "latest",
+    "nuxt": "latest",
+    "vitest": "latest"
   }
 }
