feat: updated keyworks in package.json file

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nuxt3",
     "nuxt",
     "nuxt.js",
-    "nuxt-chatgpt"
+    "nuxt-chatgpt",
+    "image",
+    "image-generator"
   ],
   "exports": {
     ".": {
