--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-chatgpt",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "ChatGPT integration for Nuxt 3",
   "license": "MIT",
   "type": "module",
@@ -60,6 +60,8 @@
     "openai": "4.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
     "@nuxt/eslint-config": "latest",
     "@nuxt/module-builder": "^0.2.1",
     "@nuxt/schema": "latest",
