feat: updated openai library to 4.96.2, removed dall-e-2 model, make dall-e-3 model default for image generator

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "dependencies": {
     "@nuxt/kit": "latest",
     "defu": "latest",
-    "openai": "4.0.0"
+    "openai": "^4.96.2"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "latest",
